# HarmonyNextCppTesting

./: README.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  my_math.h  napi_init.cpp
entry/src/main/cpp/scripts/: cmdTest.sh  coverage.html  default.profdata  default.profraw  phoneTest.sh
entry/src/main/cpp/tests/: my_math_test.cpp
entry/src/main/cpp/tests/common/: CustomTestListener.h  TestHelper.h  TestLog.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
